<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_IMU_STATE" Id="{edf548a2-e59d-48bb-a548-4de8e4fe7b63}">
    <Declaration><![CDATA[TYPE ST_IMU_STATE :
STRUCT
	imu_x:LREAL;
	imu_y:LREAL;
	imu_euler:LREAL;
	acc_x:LREAL;
	gyro_z:LREAL;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>